Updated Dev project version, removed depricated packages, added missing Unity.Adressables dependency, fixed tests

--- a/UnityProject/Assets/Plugins/Zenject/Source/Runtime/Zenject.asmdef
+++ b/UnityProject/Assets/Plugins/Zenject/Source/Runtime/Zenject.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "",
     "references": [
         "Unity.Addressables",
-        "Unity.ResourceManager",
-        "UniTask"
+        "Unity.ResourceManager"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
