--- a/UnityProject/Assets/Plugins/Zenject/Source/Runtime/Zenject.asmdef
+++ b/UnityProject/Assets/Plugins/Zenject/Source/Runtime/Zenject.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Unity.Addressables",
-        "Unity.ResourceManager"
+        "Unity.ResourceManager",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
